modified git ignore

--- a/myhealthcareportal/health/templates/home.html
+++ b/myhealthcareportal/health/templates/home.html
@@ -1,17 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="home-container">
-    <h1 class="home-title">Welcome to the Health Care Management Portal</h1>
+<div class="container mt-5">
+    <h1 class="display-4 text-center">Welcome to the Health Care Management Portal</h1>
     {% if user.is_authenticated %}
-        <p class="welcome-message">Hello, {{ user.username }}!</p>
-        {% if user.userprofile.is_doctor %}
-            <a href="{% url 'doctor_dashboard' %}" class="dashboard-link">View Doctor Dashboard</a>
-        {% else %}
-            <a href="{% url 'patient_dashboard' %}" class="dashboard-link">View Patient Dashboard</a>
-        {% endif %}
+        <p class="lead text-center">Hello, {{ user.username }}!</p>
+        <div class="text-center">
+            {% if user.userprofile.is_doctor %}
+                <a href="{% url 'doctor_dashboard' %}" class="btn btn-primary">View Doctor Dashboard</a>
+            {% else %}
+                <a href="{% url 'patient_dashboard' %}" class="btn btn-primary">View Patient Dashboard</a>
+            {% endif %}
+        </div>
     {% else %}
-        <a href="{% url 'login' %}" class="auth-link">Login</a> or <a href="{% url 'signup' %}" class="auth-link">Sign Up</a>
+        <div class="text-center">
+            <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+            <span class="mx-2">or</span>
+            <a href="{% url 'signup' %}" class="btn btn-secondary">Sign Up</a>
+        </div>
     {% endif %}
 </div>
 {% endblock %}
+
