--- a/myhealthcareportal/health/templates/view_medical_reports.html
+++ b/myhealthcareportal/health/templates/view_medical_reports.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h2>Medical Reports for {{ patient.name }}</h2>
+    <h2 class="mb-4">Medical Reports for {{ patient.name }}</h2>
 
     {% if medical_reports %}
         <div class="medical-reports">
