--- a/myhealthcareportal/health/templates/base.html
+++ b/myhealthcareportal/health/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Health Care Management Portal</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     {% if messages %}
