--- a/myhealthcareportal/health/templates/signup.html
+++ b/myhealthcareportal/health/templates/signup.html
@@ -4,18 +4,20 @@
 <div class="signup-container">
     <h2>Sign Up</h2>
     <form method="post" id="signupForm">
+
         {% csrf_token %}
 
-        <div>
-            <label for="role_doctor">
-                <input type="radio" name="role" value="doctor" id="role_doctor" required onchange="showForm('doctor')">
-                I am a Doctor
-            </label>
-            <label for="role_patient">
-                <input type="radio" name="role" value="patient" id="role_patient" required onchange="showForm('patient')">
-                I am a Patient
-            </label>
+        <div class="mb-3">
+            <div class="form-check form-check-inline mr-3">
+                <input class="form-check-input" type="radio" name="role" id="role_doctor" value="doctor" required onchange="showForm('doctor')">
+                <label class="form-check-label" for="role_doctor">I am a Doctor</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="role" id="role_patient" value="patient" required onchange="showForm('patient')">
+                <label class="form-check-label" for="role_patient">I am a Patient</label>
+            </div>
         </div>
+        
 
         <div id="doctorForm" class="form-container">
             <h3>Doctor Information</h3>
@@ -25,6 +27,7 @@
             </div>
             <div class="form-group">
                 {{ doctor_form.email.label_tag }}
+                <br>
                 {{ doctor_form.email }}
             </div>
             <div class="form-group">
@@ -74,6 +77,7 @@
             </div>
             <div class="form-group">
                 {{ patient_form.email.label_tag }}
+                <br>
                 {{ patient_form.email }}
             </div>
             <div class="form-group">
@@ -119,9 +123,9 @@
             </div>
         </div>
 
-        <button class="btn-primary" type="submit">Sign Up</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+    <p class="mt-3">Already have an account? <br> <a href="{% url 'login' %}" class="btn btn-primary">Login here</a></p>
 </div>
 
 <script>
