updated UI responsive changes

--- a/myhealthcareportal/health/templates/base_patient.html
+++ b/myhealthcareportal/health/templates/base_patient.html
@@ -62,7 +62,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'view_medical_history' %}">View Medical History</a>
+                        <a class="nav-link" href="{% url 'view_medical_history' %}">Add Medical History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
