--- a/myhealthcareportal/health/templates/base.html
+++ b/myhealthcareportal/health/templates/base.html
@@ -30,5 +30,6 @@
             }
         }, 3000);
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
