--- a/myhealthcareportal/health/templates/signup.html
+++ b/myhealthcareportal/health/templates/signup.html
@@ -1,8 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="signup-container">
+<style>
+    .alert-error {
+        color: #a94442;
+        background-color: #f2dede;
+        border-color: #ebccd1;
+        margin-top: 10px;
+
+    }
+</style>
+
+<div class="container">
     <h2>Sign Up</h2>
+    
+    {% if form.errors %}
+        <div class="alert alert-error" role="alert">
+            <strong>Error!</strong> Please correct the following errors:
+            <ul>
+                {% for field, error_list in form.errors.items %}
+                    {% for error in error_list %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+            {{ form.non_field_errors }}
+        </div>
+    {% endif %}
     <form method="post" id="signupForm">
 
         {% csrf_token %}
