--- a/myhealthcareportal/health/templates/base_doctor.html
+++ b/myhealthcareportal/health/templates/base_doctor.html
@@ -30,12 +30,14 @@
         window.setTimeout(function() {
             var alerts = document.querySelectorAll('.alert');
             for(var i = 0; i < alerts.length; i++) {
+                if (!alerts[i].id.includes('persistentAlert')) {
                 alerts[i].style.opacity = '0';
                 setTimeout(function(alert) {
                     alert.style.display = 'none';
                 }, 600, alerts[i]);
             }
-        }, 2000);
-    </script>
+        }
+    }, 2000);
+</script>
 </body>
 </html>
