--- a/myhealthcareportal/health/templates/base_patient.html
+++ b/myhealthcareportal/health/templates/base_patient.html
@@ -76,12 +76,14 @@
         window.setTimeout(function() {
             var alerts = document.querySelectorAll('.alert');
             for(var i = 0; i < alerts.length; i++) {
+                if (!alerts[i].id.includes('persistentAlert')) {
                 alerts[i].style.opacity = '0';
                 setTimeout(function(alert) {
                     alert.style.display = 'none';
                 }, 600, alerts[i]);
             }
-        }, 2000);
+        }
+    }, 2000);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
